# verne

./: .gitignore  AGENTS.md  ATTRIBUTIONS.md  CONTEXT.md  README.md  dev-app-update.yml  electron-builder.env.example  electron-builder.yml  electron.vite.config.ts  env.d.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vitest.config.ts
daemon/crates/core/: Cargo.toml
daemon/crates/core/src/: db.rs  emitter.rs  lib.rs  notes.rs  paths.rs  rpc_serve.rs  settings.rs  state.rs  types.rs
daemon/crates/core/src/daemon/: agent_status.rs  hook_receiver.rs  lifecycle.rs  mod.rs  rpc_daemon.rs  rpc_server.rs  tab_pty.rs  tabs.rs
daemon/crates/core/src/protocol/: codec.rs  methods.rs  mod.rs
daemon/crates/core/src/services/: agent_registry.rs  agent_shadow.rs  detect.rs  file_ops.rs  git.rs  git_worker.rs  grid_protocol.rs  hook_server.rs  input_encoder.rs  jsonl_reader.rs  mcp_agents.rs  mod.rs  pgrp.rs  session_manager.rs  shadow_tree.rs  terminal_emulator.rs  worktrees.rs  ws_server.rs
daemon/crates/core/src/services/agent_status/: engine.rs  mod.rs  model.rs  policy.rs
daemon/crates/core/src/services/agent_status/manifest/: compile.rs  explain.rs  mod.rs  parity.rs  regions.rs  schema.rs  source.rs  tests.rs
daemon/crates/core/src/services/agent_status/manifest/manifests/: amp.toml  antigravity.toml  claude.toml  cline.toml  codex.toml  copilot.toml  cursor.toml  default.toml  droid.toml  (+9 more)
daemon/crates/core/src/sidecar/: mod.rs
daemon/crates/core/src/sidecar/dispatch/: file_search.rs  mod.rs  notes.rs  shadow.rs  watch.rs
(+414 files in other folders)
