[package]
name = "verne-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "verne_core"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"
log = "0.4"
env_logger = "0.11"
# FSEvents (not kqueue): kqueue holds 1 fd per watched node and notify's kqueue
# backend recursively re-walks dirs on change events, so watching .git ends up
# opening an fd per loose object/worktree → EMFILE ("too many open files") on a
# busy repo. FSEvents uses one kernel stream, ~0 per-file fds (matches fff-search).
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
ignore = "0.4"
globset = "0.4"
nucleo-matcher = "0.3"
git2 = { version = "0.20", default-features = false }
sha2 = "0.10"
libc = "0.2"
nix = { version = "0.29", features = ["process", "fs", "signal"] }
ctrlc = { version = "3", features = ["termination"] }
toml_edit = "0.22"
toml = "0.8"
regex = "1"
fff-search = "0.9"
alacritty_terminal = "0.26.0"

[dev-dependencies]
tempfile = "3"
